<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/bg_register"
    tools:context="loginandregister.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_input_user_email_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_txt_input_email"
                android:fontFamily="sans-serif-condensed"
                android:inputType="textEmailAddress"
                android:background="@drawable/edt_bg"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/txt_input_pass_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_txt_input_pwd"
                android:fontFamily="sans-serif-condensed"
                android:inputType="textPassword"
                android:background="@drawable/edt_bg"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/txt_re_input_pass_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_txt_re_input_pwd"
                android:fontFamily="sans-serif-condensed"
                android:inputType="textPassword"
                android:background="@drawable/edt_bg"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/ripple_effect1"
                android:elevation="0dp"
                android:gravity="center"
                android:text="@string/register"
                android:fontFamily="sans-serif-condensed"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"/>

            <Button
                android:id="@+id/btn_link_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/already_registered" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/layout_input"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_mobi" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:gravity="bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_copyright" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/copy_right"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>
