<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context=".feedbacks.NewFeedbackActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/new_FB"
            app:titleTextColor="@color/colorPrimary"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            android:elevation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/edt_input_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="66dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/subject"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edt_bg"
        android:padding="10dp"/>

    <View
        android:id="@+id/divide1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/edt_input_subject"/>

    <EditText
        android:id="@+id/edt_input_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/divide1"
        android:layout_above="@+id/btn_send"
        android:hint="@string/content"
        android:fontFamily="sans-serif-condensed"
        android:textSize="15sp"
        android:gravity="top"
        android:padding="10dp"
        android:textColor="@color/colorBlack"
        android:background="@drawable/edt_bg"/>

   <!-- <TextView
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ripple_effect1"
        android:elevation="0dp"
        android:gravity="center"
        android:text="@string/send"
        android:fontFamily="sans-serif-condensed"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"/>-->

</RelativeLayout>