<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feedbacks.ReplyActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#fafafa"
            app:titleTextColor="@color/colorPrimary"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/content1"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_view_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorBlack"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/reply"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_reply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:gravity="top"
                android:padding="10dp"
                android:hint="@string/hint_reply"
                android:background="@drawable/edt_bg2"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>